--- a/.travis.yml
+++ b/.travis.yml
@@ -10,45 +10,25 @@ jdk:
   - openjdk8
   - openjdk11
 
-before_install:
-  # Parameters used during release
-  - git config user.name "$GH_USER"
-  - git config user.email "$GH_USER_EMAIL"
-  # setup https authentication credentials, used by ./mvnw release:prepare
-  - git config credential.helper "store --file=.git/credentials"
-  - echo "https://$GH_TOKEN:@github.com" > .git/credentials
-
 jobs:
   include:
     - stage: snapshot
-      name: "Deploy Snapshot to JCenter"
+      name: "Deploy Snapshot to OSSRH"
       if: branch = master AND type != pull_request AND commit_message !~ /^(prepare release ([0-9\.]+))$/
       jdk: openjdk8
       install: true
       script:
         - ./mvnw -B -nsu -s ./travis/settings.xml -P release -pl -:feign-benchmark -DskipTests=true deploy
     - stage: release
-      name: "Release to JCenter"
+      name: "Release to OSSRH and Central"
       if: tag =~ /^[0-9\.]+$/
       jdk: openjdk8
       install: true
       script:
         - ./mvnw -B -nsu -s ./travis/settings.xml -P release -pl -:feign-benchmark -DskipTests=true deploy
-    - stage: sync
-      name: "Sync with Maven Central"
-      if: tag =~ /^[0-9\.]+$/
-      jdk: openjdk8
-      install: true
-      script:
-        # this step can take an inordinate amount of time, so the wait should push it to 30 minutes
-        - travis_wait 30 ./mvnw -B -nsu -s ./travis/settings.xml -N io.zipkin.centralsync-maven-plugin:centralsync-maven-plugin:sync
 
 env:
   global:
-    # Ex. travis encrypt BINTRAY_USER=your_github_account
-    - secure: "VeTOgXwhZLf8uwlnYpB9tuY+NV6kiooRN0FMDoWCXuPPSz/tX2mqmshBXDYsJu0EcRtZb21MkbQwbdJ8Th9K/bvj4sGNK1PrBm9Hmz6e2AvAcxn3ROv86GMTkd7O25OsipTT+/qWrbR3s3lHQxYo5WMsrlEmJ/EF5y5Go5wx90c="
-    # Ex. travis encrypt BINTRAY_KEY=xxx-https://bintray.com/profile/edit-xxx --add
-    - secure: "WND+fjAqpdHArSbXAK7l0dpQLrX0hL/XymV02rhe0pVT1g0J1V32ncqDCVnn/73wTiECTen6y3o1vq3ByIdT9tUErt3o8oEROQsI/cVX9IhvJ/DtcW1lqafXKmQZwDQsifVxhKroW1VuZQbGrKnqVUzfqx5OzxgoNVWpkkxhf50="
     # Ex. travis encrypt GH_USER_EMAIL=for_github@domain.com --add
     - secure: "dG1Qt8bqe3TsmLOmYpWYsI55N0zLWCsupdpS7zMOedpM2q0laac56uc2gGV6qQIPdJQdCWzr9CE/h1nG4lJdJfreC13reQ3PDF79Yh8tMvdO1iwrSeIQ7eeRY6hs72GUtdIhfwetUgwCgIJpmBHS7O3yJhxQAOmu5twAuABiuSE="
     # Ex. travis encrypt GH_USER=your_github_account --add
